filter and toArray functions. support for quick notation.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,7 +16,7 @@
 
   <!-- include spec files here... -->
   <script src="test/iter.js"></script>
-
+  <script src="test/extensions.js"></script>
 </head>
 
 <body>
